# i2c-pio-rs

./: Cargo.toml
.cargo/: config.toml
on-target-tests/: Cargo.toml
on-target-tests/tests/: i2c_loopback.rs
on-target-tests/tests/i2c_tests/: blocking.rs  mod.rs
src/: lib.rs
