[package]
name = "i2c-pio"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
description = "I2C driver implementation using the RP2040's PIO peripheral."
documentation = "https://docs.rs/i2c-pio"
repository = "https://github.com/rp-rs/i2c-pio-rs"

[workspace]
members = ["on-target-tests"]

[dependencies]
cortex-m = "0.7.7"
embedded-hal = { version = "1.0.0" }
nb = "1.1.0"
pio = "0.3.0"
rp235x-hal = "0.4.0"
fugit = "0.3.9"
defmt = { version = "1.0.1", optional = true }
either = { version = "1.15.0", default-features = false }
heapless = { version = "0.9.3", default-features = false }

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

