[package]
edition = "2021"
name = "on-target-tests"
version = "0.1.0"
publish = false

[[test]]
name = "i2c_loopback"
harness = false

[dependencies]
i2c-pio = { path = "../", features = ["defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
fugit = "0.3.9"

defmt = "1.0"
defmt-rtt = "1.1"
defmt-test = "0.4.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

rp235x-hal = { version = "0.4.0", features = [
  "critical-section-impl",
  "defmt",
  "rt",
] }

rp2040-boot2 = "0.3.0"
critical-section = "1.2.0"
heapless = { version = "0.9.3", features = [
  "portable-atomic-critical-section",
  "defmt",
] }
itertools = { version = "0.14.0", default-features = false }
